+ added RFE #233 - Arch module OBJ exporter
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5019 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Arch/CMakeLists.txt
+++ b/src/Mod/Arch/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(Arch_SRCS
     Commands.py
     SectionPlane.py
     importDAE.py
+    importOBJ.py
     Window.py
 )
 SOURCE_GROUP("" FILES ${Arch_SRCS})
