+ separate SVG & DXF output from projection algorithm and move to own classes
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5020 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -39,6 +39,8 @@ SET(Drawing_SRCS
 )
 
 SET(DrawingAlgos_SRCS
+    DrawingExport.cpp
+    DrawingExport.h
     ProjectionAlgos.cpp
     ProjectionAlgos.h
 )
