+ added RFE #224 - improvements to the Draft axis marker
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5022 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/Makefile.am
+++ b/src/Mod/Draft/Makefile.am
@@ -94,6 +94,7 @@ EXTRA_DIST = \
         Resources/icons/Draft_Trimex.svg \
         Resources/icons/Draft_Upgrade.svg \
         Resources/icons/Draft_Wire.svg \
+		Resources/icons/Draft_Wipe.svg \
         Resources/icons/Draft_WireToBSpline.svg \
         Resources/icons/Draft_Construction.svg \
 		Resources/icons/Draft_Draft.svg \
