--- a/src/Mod/Part/Gui/Makefile.am
+++ b/src/Mod/Part/Gui/Makefile.am
@@ -17,6 +17,7 @@ BUILT_SOURCES=\
 		ui_Mirroring.h \
 		ui_TaskFaceColors.h \
 		ui_TaskShapeBuilder.h \
+		ui_TaskLoft.h \
 		moc_CrossSections.cpp \
 		moc_DlgBooleanOperation.cpp \
 		moc_DlgExtrusion.cpp \
@@ -32,6 +33,7 @@ BUILT_SOURCES=\
 		moc_Mirroring.cpp \
 		moc_TaskFaceColors.cpp \
 		moc_TaskShapeBuilder.cpp \
+		moc_TaskLoft.cpp \
 		qrc_Part.cpp 
 
 libPartGui_la_SOURCES=\
@@ -68,6 +70,8 @@ libPartGui_la_SOURCES=\
 		TaskFaceColors.h \
 		TaskShapeBuilder.cpp \
 		TaskShapeBuilder.h \
+		TaskLoft.cpp \
+		TaskLoft.h \
 		PreCompiled.cpp \
 		PreCompiled.h \
 		SoBrepShape.cpp \
@@ -215,6 +219,7 @@ EXTRA_DIST = \
 		Mirroring.ui \
 		TaskFaceColors.ui \
 		TaskShapeBuilder.ui \
+		TaskLoft.ui \
 		Resources/Part.qrc \
 		Resources/translations/Part_af.qm \
 		Resources/translations/Part_af.ts \
