+ add missing include directories (for MacOSX)
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5085 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/3rdParty/salomesmesh/Makefile.am
+++ b/src/3rdParty/salomesmesh/Makefile.am
@@ -7,7 +7,7 @@ targetdir = $(prefix)
 EXTRA_DIST = CMakeLists.txt LICENCE.lgpl.txt
 
 # set compiler flags and include directories, -fpermissive and -ffriend-injection not needed for occ6.3
-AM_CPPFLAGS = -I$(OCC_INC) -I$(srcdir)/$(smeshdir)inc/
+AM_CPPFLAGS = -I$(OCC_INC) -I$(srcdir)/$(smeshdir)inc/ $(all_includes)
 AM_CXXFLAGS = -Wno-sign-compare -Wno-switch -Wno-reorder -Wno-unused -Wno-parentheses -Wno-comment
 
 # set library names
