+ Add fillet dialog + fix undo/redo bug in edit PartDesign features + partially clean up module dependency in ViewProvider base class
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5108 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/PartDesign/Gui/CMakeLists.txt
+++ b/src/Mod/PartDesign/Gui/CMakeLists.txt
@@ -29,6 +29,7 @@ set(PartDesignGui_MOC_HDRS
     TaskPadParameters.h
     TaskPatternRectangularParameters.h
     TaskPocketParameters.h
+    TaskFilletParameters.h
     TaskHoleParameters.h
     TaskRevolutionParameters.h
 )
@@ -42,6 +43,7 @@ set(PartDesignGui_UIC_SRCS
     TaskPadParameters.ui
     TaskPatternRectangularParameters.ui
     TaskPocketParameters.ui
+    TaskFilletParameters.ui
     TaskHoleParameters.ui
     TaskRevolutionParameters.ui
 )
@@ -56,6 +58,8 @@ SET(PartDesignGuiViewProvider_SRCS
     ViewProviderHole.h
     ViewProviderPocket.cpp
     ViewProviderPocket.h
+    ViewProviderFillet.cpp
+    ViewProviderFillet.h
     ViewProviderRevolution.cpp
     ViewProviderRevolution.h
     ViewProviderPatternRectangular.cpp
@@ -76,6 +80,9 @@ SET(PartDesignGuiTaskDlgs_SRCS
     TaskPocketParameters.ui
     TaskPocketParameters.cpp
     TaskPocketParameters.h
+    TaskFilletParameters.ui
+    TaskFilletParameters.cpp
+    TaskFilletParameters.h
     TaskRevolutionParameters.ui
     TaskRevolutionParameters.cpp
     TaskRevolutionParameters.h
