+ rename file to avoid build errors (with a Linux guest building on a Windows host)
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5124 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -97,8 +97,8 @@ SET(Features_SRCS
     FeatureMirroring.h
     FeatureRevolution.cpp
     FeatureRevolution.h
-    Features.cpp
-    Features.h
+    PartFeatures.cpp
+    PartFeatures.h
     PartFeature.cpp
     PartFeature.h
     PartFeatureReference.cpp
