+ add kwahoo's Spring script to PartDesign
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5142 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/src/Mod/PartDesign/App/CMakeLists.txt
@@ -77,13 +77,14 @@ SET(PartDesign_SRCS
 
 SET(PartDesign_Scripts
     __init__.py
-	Init.py
-	TestPartDesignApp.py
+    Init.py
+    TestPartDesignApp.py
     Scripts/__init__.py
     Scripts/Gear.py
     Scripts/DistanceBolt.py
     Scripts/RadialCopy.py
     Scripts/Parallelepiped.py
+    Scripts/Spring.py
 )
 
 add_library(PartDesign SHARED ${PartDesign_SRCS})
