--- a/src/Mod/PartDesign/Scripts/Makefile.am
+++ b/src/Mod/PartDesign/Scripts/Makefile.am
@@ -5,7 +5,8 @@ data_DATA = \
 		Gear.py \
 		DistanceBolt.py \
 		RadialCopy.py \
-		Parallelepiped.py
+		Parallelepiped.py \
+		Spring.py
 
 EXTRA_DIST = \
 		$(data_DATA)
