--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -60,6 +60,12 @@ if(MSVC)
     ADD_MSVC_PRECOMPILED_HEADER("PreCompiled.h" "PreCompiled.cpp" Drawing_CPP_SRCS)
 endif(MSVC)
 
+# Set special compiler flag to convert a SIGSEV into an exception
+# to handle issue #0000478.
+IF(MSVC)
+SET_SOURCE_FILES_PROPERTIES(ProjectionAlgos.cpp PROPERTIES COMPILE_FLAGS "/EHa")
+ENDIF(MSVC)
+
 add_library(Drawing SHARED ${Drawing_SRCS} ${Features_SRCS} ${DrawingAlgos_SRCS})
 target_link_libraries(Drawing ${Drawing_LIBS})
 fc_copy_script("Mod/Drawing" "Drawing" Init.py)
