+ add Epitrochoid example
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5154 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/src/Mod/PartDesign/App/CMakeLists.txt
@@ -82,6 +82,7 @@ SET(PartDesign_Scripts
     Scripts/__init__.py
     Scripts/Gear.py
     Scripts/DistanceBolt.py
+    Scripts/Epitrochoid.py
     Scripts/RadialCopy.py
     Scripts/Parallelepiped.py
     Scripts/Spring.py
