+ rename MainPart to Body
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5223 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/src/Mod/PartDesign/App/CMakeLists.txt
@@ -24,8 +24,8 @@ SET(Features_SRCS
     Feature.h
     FeaturePatternRectangular.h
     FeaturePatternRectangular.cpp
-    FeatureMainPart.cpp
-    FeatureMainPart.h
+    Body.cpp
+    Body.h
 )
 SOURCE_GROUP("Features" FILES ${Features_SRCS})
 
