+ use svg graphics for Arch tree icons
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5226 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Arch/Makefile.am
+++ b/src/Mod/Arch/Makefile.am
@@ -49,5 +49,13 @@ EXTRA_DIST = \
 		Resources/icons/Arch_RemoveShape.svg \
 		Resources/icons/Arch_SectionPlane.svg \
 		Resources/icons/Arch_Window.svg \
+        Resources/icons/Arch_Wall_Tree.svg \
+        Resources/icons/Arch_Cell_Tree.svg \
+        Resources/icons/Arch_Building_Tree.svg \
+        Resources/icons/Arch_Floor_Tree.svg \
+        Resources/icons/Arch_SectionPlane_Tree.svg \
+        Resources/icons/Arch_Site_Tree.svg \
+        Resources/icons/Arch_Structure_Tree.svg \
+        Resources/icons/Arch_Window_Tree.svg \
 		Resources/ui/archprefs-base.ui
 
