+ add Thomas Anderson's remove splitter algorithm
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5228 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -227,6 +227,8 @@ SET(Part_SRCS
     TopoShape.h
     edgecluster.cpp
     edgecluster.h
+    modelRefine.cpp
+    modelRefine.h
 )
 
 SET(Part_Scripts
